lintian (1.23.33) UNRELEASED; urgency=low

  * checks/common_data.pm:
    + [CW] Add automaken as a known virtual package.
  * checks/cruft{.desc,}:
    + [RA] Check for .git directories in source packages.  Thanks, Julien
      Cristau.  (Closes: #433516)
  * checks/files{.desc,}:
    + [RA] Check for .git directories in binary packages.
  * checks/menu-format{.desc,}:
    + [RA] Switch to the new menu hierarchy, which will be in the next
      release of Policy.  Add specific checks for the major renamings to
      hopefully cut down on the confusion and provide some specific
      guidance.  Remove the code that allowed for applications to create
      new sub-menus, since the current menu documentation says not to do
      that.  (Closes: #431844)
  * checks/scripts:
    + [RA] If rm output is redirected to /dev/null, don't think that rm is
      removing /dev/null.  Thanks, Robert Luberda.  (Closes: #431259)
    + [RA] xjed also provides jed-script.  Thanks, Jörg Sommer.
      (Closes: #431629)
    + [RA] Don't complain about ruby libraries in /usr/lib/ruby that have
      shebang lines.  This is a common means for embedding unit tests in
      Ruby libraries.  Thanks, Paul van Tilburg.  (Closes: #431545)
  * checks/shared-libs:
    + [RA] Exclude udebs from dependency checking in the shlibs files
      since binary packages may legitimately declare udeb dependencies on
      other packages.  Thanks, Loïc Minier.  (Closes: #431395)
  * checks/version-substvars:
    + [RA] Don't skip other checks for binNMUability when warning about
      the deprecated ${Source-Version} substvar.  Thanks, Lior Kaplan.
      (Closes: #432959)

  * frontend/lintian:
    + [RA] Add \w+-backports to the known distribution list.  Thanks,
      Vincent Danjean.  (Closes: #432268)

 -- Russ Allbery <rra@debian.org>  Mon, 23 Jul 2007 19:29:32 -0700

lintian (1.23.32) unstable; urgency=low

  The "stability of output" release.

  * checks/binaries: